# pixel-sort-level-designer

./: .gitignore  IMPLEMENTATION_GUIDE.md  LEVEL_DESIGN_GUIDE.md  README.md  TOOLS.md  pyproject.toml
pixel_sort_level_designer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
psld/: __init__.py  backward_slots.py  cli.py  coloring.py  component_split.py  image_to_grid.py  level_from_image.py  level_from_word.py  llm_openai.py  palette_map.py  region_stats.py  render_png.py  sim.py  slots_from_top.py  solver.py  top_rebalance.py
psld/tests/: test_backward_slots.py  test_component_split.py  test_palette_map.py  test_region_stats.py  test_slots_from_top.py  test_solver_smoke.py
scripts/: preview_level.py  py
